Added the new Unique "Scarab Roller"

--- a/src/main/resources/assets/simplymore/lang/en_us.json
+++ b/src/main/resources/assets/simplymore/lang/en_us.json
@@ -92,5 +92,10 @@
 
   "item.simplymore.jester_penetrate": "Jester Penetrate",
   "item.simplymore.jester_penetrate.tooltip1": "Unique Effect: Deadliest Minecraft Player",
-  "item.simplymore.jester_penetrate.tooltip2": "While held, gain speed, strength and haste."
+  "item.simplymore.jester_penetrate.tooltip2": "While held, gain speed, strength and haste.",
+
+  "item.simplymore.scarab_roller": "Scarab Roller",
+  "item.simplymore.scarab_roller.tooltip1": "Unique Effect: Dune Rider",
+  "item.simplymore.scarab_roller.tooltip2": "Rush forwards until you hit a wall. Anyone",
+  "item.simplymore.scarab_roller.tooltip3": "you ram into will be damaged and launched back."
 }
