--- a/src/main/resources/assets/simplymore/lang/en_us.json
+++ b/src/main/resources/assets/simplymore/lang/en_us.json
@@ -46,6 +46,12 @@
   "item.simplymore.netherite_khopesh": "Netherite Khopesh",
   "item.simplymore.runic_khopesh": "Runic Khopesh",
 
+  "item.simplymore.iron_dagger": "Iron Dagger",
+  "item.simplymore.gold_dagger": "Gold Dagger",
+  "item.simplymore.diamond_dagger": "Diamond Dagger",
+  "item.simplymore.netherite_dagger": "Netherite Dagger",
+  "item.simplymore.runic_dagger": "Runic Dagger",
+
   "item.simplymore.great_slither": "Great Slither",
   "item.simplymore.great_slither.tooltip1": "Unique Effect: Poisonous Grasp",
   "item.simplymore.great_slither.tooltip2": "Chance on hit to inflict poison.",
