Untextured/unnammed lance effect now has a name and texture

--- a/src/main/resources/assets/simplymore/lang/en_us.json
+++ b/src/main/resources/assets/simplymore/lang/en_us.json
@@ -6,7 +6,7 @@
   "effect.simplymore.toxic": "Toxic",
   "effect.simplymore.molten_flare": "Smoking Execution",
   "effect.simplymore.mimicry": "Twisted Form",
-  "effect.simplymore.lance": "Friendship",
+  "effect.simplymore.lance_mounted": "Friendship",
   "effect.simplymore.harvest": "Sanguine Harvest",
 
   "item.simplymore.runefused_carver": "Runefused Carver",
