--- a/src/main/resources/assets/simplymore/lang/en_us.json
+++ b/src/main/resources/assets/simplymore/lang/en_us.json
@@ -128,5 +128,12 @@
   "item.simplymore.scarab_roller.tooltip1": "Unique Effect: Dune Rider",
   "item.simplymore.scarab_roller.tooltip2": "Chance on hit to gain resistance.",
   "item.simplymore.scarab_roller.tooltip3": "Rush forwards until you hit a wall. Anyone",
-  "item.simplymore.scarab_roller.tooltip4": "you ram into will be damaged and launched back."
+  "item.simplymore.scarab_roller.tooltip4": "you ram into will be damaged and launched back.",
+
+  "item.simplymore.black_pearl": "Black Pearl",
+  "item.simplymore.black_pearl.tooltip1": "Unique Effect: Plunder",
+  "item.simplymore.black_pearl.tooltip2": "Chance on hit to steal a positive",
+  "item.simplymore.black_pearl.tooltip3": "status effect.",
+  "item.simplymore.black_pearl.tooltip4": "Blast forward an explosive cannonball.",
+  "item.simplymore.black_pearl.tooltip5": "This will hurt you if too close."
 }
