New Unique "Timekeeper"

--- a/src/main/resources/assets/simplymore/lang/en_us.json
+++ b/src/main/resources/assets/simplymore/lang/en_us.json
@@ -11,7 +11,7 @@
   "effect.simplymore.rage": "Adrenaline Rage",
   "effect.simplymore.grotesque": "Grotesque Resistance",
   "effect.simplymore.solidified": "Solidified",
-  "effect.simplymore.petrified": "Petrified",
+  "effect.simplymore.stunned": "Stunned",
 
   "item.simplymore.runefused_carver": "Runefused Carver",
   "item.simplymore.netherfused_carver": "Netherfused Carver",
@@ -162,7 +162,7 @@
   "item.simplymore.blade_of_the_grotesque.tooltip3": "knockback resistance.",
   "item.simplymore.blade_of_the_grotesque.tooltip4": "Solidify for 2 seconds, during which you may not",
   "item.simplymore.blade_of_the_grotesque.tooltip5": "attack nor move, but gain extra defense.",
-  "item.simplymore.blade_of_the_grotesque.tooltip6": "Petrify anyone who hits you during this time",
+  "item.simplymore.blade_of_the_grotesque.tooltip6": "Stun anyone who hits you during this time",
   "item.simplymore.blade_of_the_grotesque.tooltip7": "leaving them unable to attack or move for",
   "item.simplymore.blade_of_the_grotesque.tooltip8": "a short duration.",
 
@@ -174,5 +174,33 @@
   "item.simplymore.vipers_call.tooltip5": "This effect only occurs if held in the",
   "item.simplymore.vipers_call.tooltip6": "mainhand.",
   "item.simplymore.vipers_call.tooltip7": "Summon a large ring around yourself",
-  "item.simplymore.vipers_call.tooltip8": "which damages and poisons enemies."
+  "item.simplymore.vipers_call.tooltip8": "which damages and poisons enemies.",
+
+  "item.simplymore.timekeeper": "Timekeeper",
+  "item.simplymore.timekeeper_day.tooltip1": "Unique Effect: Curse of Ra",
+  "item.simplymore.timekeeper_day.tooltip2": "Chance on hit to lighten the area around you,",
+  "item.simplymore.timekeeper_day.tooltip3": "making all entities within 30 blocks glow.",
+  "item.simplymore.timekeeper_day.tooltip4": "Harness the sun's energy to blast a solar flare",
+  "item.simplymore.timekeeper_day.tooltip5": "forwards which blinds, burns and blasts away",
+  "item.simplymore.timekeeper_day.tooltip6": "foes.",
+  "item.simplymore.timekeeper_day.tooltip7": "This effect's cooldown is reduced the closer",
+  "item.simplymore.timekeeper_day.tooltip8": "it is to noon.",
+  "item.simplymore.timekeeper_day.tooltip9": "Has a different effect at night.",
+  "item.simplymore.timekeeper_night.tooltip1": "Unique Effect: Curse of Khonsu",
+  "item.simplymore.timekeeper_night.tooltip2": "Chance on hit to darken the area around you,",
+  "item.simplymore.timekeeper_night.tooltip3": "making you fast, invisible and inflicting darkness.",
+  "item.simplymore.timekeeper_night.tooltip4": "Harness the moon's energy to shift the tides,",
+  "item.simplymore.timekeeper_night.tooltip5": "blasting forwards a gravitational pull which",
+  "item.simplymore.timekeeper_night.tooltip6": "launches foes upwards, slowing them greatly.",
+  "item.simplymore.timekeeper_night.tooltip7": "This effect's cooldown is reduced the closer",
+  "item.simplymore.timekeeper_night.tooltip8": "it is to midnight.",
+  "item.simplymore.timekeeper_night.tooltip9": "Has a different effect at day.",
+  "item.simplymore.timekeeper_timeless.tooltip1": "Unique Effect: Curse of Thoth",
+  "item.simplymore.timekeeper_timeless.tooltip2": "This place is timeless. The Timekeeper falters here.",
+  "item.simplymore.timekeeper_timeless.tooltip3": "Chance on hit to lighten the area around you,",
+  "item.simplymore.timekeeper_timeless.tooltip4": "making all entities within 30 blocks glow.",
+  "item.simplymore.timekeeper_timeless.tooltip5": "Chance on hit to darken the area around you,",
+  "item.simplymore.timekeeper_timeless.tooltip6": "making you fast, invisible and inflicting darkness.",
+  "item.simplymore.timekeeper_timeless.tooltip7": "Has a different effect in dimensions with a",
+  "item.simplymore.timekeeper_timeless.tooltip8": "daylight cycle."
 }
