New Unique "Matterbane"

--- a/src/main/resources/assets/simplymore/lang/en_us.json
+++ b/src/main/resources/assets/simplymore/lang/en_us.json
@@ -153,7 +153,7 @@
   "item.simplymore.the_vessel_breach.tooltip3": "Cut yourself for 30% of your health to",
   "item.simplymore.the_vessel_breach.tooltip4": "enter a rage. While enraged, you bleed",
   "item.simplymore.the_vessel_breach.tooltip5": "but may not take damage otherwise.",
-  "item.simplymore.the_vessel_breach.tooltip6": "You also gain 25% lifesteal and a damage",
+  "item.simplymore.the_vessel_breach.tooltip6": "You also gain 28% lifesteal and a damage",
   "item.simplymore.the_vessel_breach.tooltip7": "increase.",
 
   "item.simplymore.blade_of_the_grotesque": "Blade of the Grotesque",
@@ -202,5 +202,32 @@
   "item.simplymore.timekeeper_timeless.tooltip5": "Chance on hit to darken the area around you,",
   "item.simplymore.timekeeper_timeless.tooltip6": "making you fast, invisible and inflicting darkness.",
   "item.simplymore.timekeeper_timeless.tooltip7": "Has a different effect in dimensions with a",
-  "item.simplymore.timekeeper_timeless.tooltip8": "daylight cycle."
+  "item.simplymore.timekeeper_timeless.tooltip8": "daylight cycle.",
+
+  "item.simplymore.matterbane": "Matterbane",
+  "item.simplymore.matterbane.tooltip1": "Unique Effect: Negative Energy",
+  "item.simplymore.matterbane.tooltip2": "Chance on hit to inflict levitation.",
+  "item.simplymore.matterbane.tooltip3": "Spawn a rift which will connect to enemies within",
+  "item.simplymore.matterbane.tooltip4": "10 blocks. These enemies glow, are slowed",
+  "item.simplymore.matterbane.tooltip5": "and are pulled back if they attempt",
+  "item.simplymore.matterbane.tooltip6": "to leave the rift's range.",
+  "item.simplymore.matterbane.tooltip7": "Rifts disappear after 15 seconds of if you",
+  "item.simplymore.matterbane.tooltip8": "move 15 blocks away.",
+  "item.simplymore.matterbane.tooltip9": "Dye Color: ",
+  "item.simplymore.matterbane.color_white": "White",
+  "item.simplymore.matterbane.color_orange": "Orange",
+  "item.simplymore.matterbane.color_magenta": "Magenta",
+  "item.simplymore.matterbane.color_light_blue": "Light Blue",
+  "item.simplymore.matterbane.color_yellow": "Yellow",
+  "item.simplymore.matterbane.color_lime": "Lime",
+  "item.simplymore.matterbane.color_pink": "Pink",
+  "item.simplymore.matterbane.color_gray": "Gray",
+  "item.simplymore.matterbane.color_light_gray": "Light Gray",
+  "item.simplymore.matterbane.color_cyan": "Cyan",
+  "item.simplymore.matterbane.color_purple": "Purple",
+  "item.simplymore.matterbane.color_blue": "Blue",
+  "item.simplymore.matterbane.color_brown": "Brown",
+  "item.simplymore.matterbane.color_green": "Green",
+  "item.simplymore.matterbane.color_red": "Red",
+  "item.simplymore.matterbane.color_black": "Black"
 }
