New Unique "Stasis"

--- a/src/main/resources/assets/simplymore/lang/en_us.json
+++ b/src/main/resources/assets/simplymore/lang/en_us.json
@@ -244,5 +244,12 @@
   "item.simplymore.smouldering_ruin.tooltip8": "a slash that inflicts Withering Fate.",
   "item.simplymore.smouldering_ruin.tooltip9": "The target gains a higher level of Withering",
   "item.simplymore.smouldering_ruin.tooltip10": "fate the higher its maximum hp.",
-  "item.simplymore.smouldering_ruin.tooltip11": "Withering Fate causes reduced maximum hp."
+  "item.simplymore.smouldering_ruin.tooltip11": "Withering Fate causes reduced maximum hp.",
+
+  "item.simplymore.stasis": "Stasis",
+  "item.simplymore.stasis.tooltip1": "Unique Effect: Stagnation",
+  "item.simplymore.stasis.tooltip2": "Chance on hit to shock the enemy, rendering",
+  "item.simplymore.stasis.tooltip3": "their abilities on cooldown for a few seconds.",
+  "item.simplymore.stasis.tooltip4": "After charging, erupt lightning in around you.",
+  "item.simplymore.stasis.tooltip5": "The lightning does not hurt you."
 }
