Added Icons and Names for Tidebreaker Unique Effects

--- a/src/main/resources/assets/simplymore/lang/en_us.json
+++ b/src/main/resources/assets/simplymore/lang/en_us.json
@@ -14,6 +14,8 @@
   "effect.simplymore.stunned": "Stunned",
   "effect.simplymore.mistified": "Misty Step",
   "effect.simplymore.withering_fate": "Withering Fate",
+  "effect.simplymore.insanity": "Insanity",
+  "effect.simplymore.tidebreaker_rain": "Madness Rain",
 
   "item.simplymore.runefused_carver": "Runefused Carver",
   "item.simplymore.netherfused_carver": "Netherfused Carver",
