--- a/src/main/resources/assets/simplymore/lang/en_us.json
+++ b/src/main/resources/assets/simplymore/lang/en_us.json
@@ -252,7 +252,7 @@
   "item.simplymore.stasis.tooltip1": "Unique Effect: Stagnation",
   "item.simplymore.stasis.tooltip2": "Chance on hit to shock the enemy, rendering",
   "item.simplymore.stasis.tooltip3": "their abilities on cooldown for a few seconds.",
-  "item.simplymore.stasis.tooltip4": "After charging, erupt lightning in around you.",
+  "item.simplymore.stasis.tooltip4": "After charging, erupt lightning around you.",
   "item.simplymore.stasis.tooltip5": "The lightning does not hurt you.",
 
   "item.simplymore.tidebreaker": "Tidebreaker",
