New Unique, Earthshatter

--- a/src/main/resources/assets/simplymore/lang/en_us.json
+++ b/src/main/resources/assets/simplymore/lang/en_us.json
@@ -352,8 +352,6 @@
   "item.simplymore.earthshatter.tooltip5": "This effect stacks.",
   "item.simplymore.earthshatter.tooltip6": "After a short charge, roar, shattering the ",
   "item.simplymore.earthshatter.tooltip7": "ground around you, causing those hit to be",
-  "item.simplymore.earthshatter.tooltip8": "weakened, slowed and inflcited with armor crunch",
-  "item.simplymore.earthshatter.tooltip9": "Using the ability again quickly after the first",
-  "item.simplymore.earthshatter.tooltip10": "will shatter the ground again, launching foes upwards."
+  "item.simplymore.earthshatter.tooltip8": "weakened, slowed and inflcited with armor crunch"
 
 }
