--- a/src/main/resources/assets/simplymore/lang/en_us.json
+++ b/src/main/resources/assets/simplymore/lang/en_us.json
@@ -350,8 +350,8 @@
   "item.simplymore.earthshatter.tooltip3": "Chance on hit to inflict Armor Crunch,",
   "item.simplymore.earthshatter.tooltip4": "making an opponent's armour less effective",
   "item.simplymore.earthshatter.tooltip5": "This effect stacks.",
-  "item.simplymore.earthshatter.tooltip6": "After a short charge, roar, shattering the ",
-  "item.simplymore.earthshatter.tooltip7": "ground around you, causing those hit to be",
+  "item.simplymore.earthshatter.tooltip6": "After a short charge, slam downwards, shattering the ",
+  "item.simplymore.earthshatter.tooltip7": "ground around you, causing those hit to be launched,",
   "item.simplymore.earthshatter.tooltip8": "weakened, slowed and inflcited with armor crunch"
 
 }
